[package]
name = "laron-crypto"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Ade M Ramdani <curiousdev04@gmail.com>"]
description = "Cryptography helper library"
readme = "README.md"
keywords = ["crypto", "ethereum", "keccak", "k256", "elliptic_curve"]
repository = "https://github.com/laron-tech/laron-crypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horror = "0.1"
k256 = { version = "0.11.5", features = ["ecdsa", "keccak256"] }
rand = "0.8.4"
hex = "0.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
